# MachineLearning-CovidAnalysis

./: README.md  environment.yml  pyproject.toml
data/: covid-19-country-statistics-dataset.csv  covid-19-country-statistics-dataset.xlsx
notebook/: FinalProject.ipynb  FinalProject_vFinal.ipynb
